# webvtt-py

./: .readthedocs.yaml  .travis.yml  CHANGELOG.rst  Makefile  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  quickstart.rst  usage.rst
tests/: test_cli.py  test_models.py  test_sbv.py  test_sbv_parser.py  test_segmenter.py  test_srt.py  test_srt_parser.py  test_utils.py  test_vtt.py  test_webvtt.py  test_webvtt_parser.py
tests/samples/: comments.vtt  styles_with_comments.vtt
webvtt/: __init__.py  cli.py  errors.py  models.py  parsers.py  sbv.py  segmenter.py  srt.py  structures.py  utils.py  vtt.py  webvtt.py  writers.py
