[metadata]
description_file = README.rst

[tox:tox]
envlist = codestyle,py,coverage

[coverage:run]
source = webvtt
branch = true

[coverage:report]
fail_under = 97

[testenv]
deps =
    coverage
description = run the tests and provide coverage metrics
commands =
    coverage run -m unittest discover

[testenv:codestyle]
deps =
    flake8
    mypy
commands =
    flake8 webvtt setup.py
    mypy webvtt

[testenv:coverage]
deps = coverage
commands =
    coverage html --fail-under=0
    coverage report
